--- a/oauth/templates/show_class.html
+++ b/oauth/templates/show_class.html
@@ -3,11 +3,9 @@
 <head>
     <meta charset="UTF-8">
     <title>Title</title>
-    <style type = "text/css">
-        body{color:red}
-    </style>
 </head>
 <body>
-    now:{{username}}
+北京大学
+
 </body>
 </html>
