--- a/oauth/templates/index.html
+++ b/oauth/templates/index.html
@@ -3,11 +3,8 @@
 <head>
     <meta charset="UTF-8">
     <title>Title</title>
-    <style type = "text/css">
-        body{color:red}
-    </style>
 </head>
 <body>
-    now:{{username}}
+长江大学
 </body>
 </html>
