--- a/weibo/templates/user_edit.html
+++ b/weibo/templates/user_edit.html
@@ -3,6 +3,11 @@
 <head>
     <meta charset="UTF-8">
     <title>用户的信息编辑</title>
+    <style type="text/css">
+        .text-err{
+            color: red;
+        }
+    </style>
 </head>
 <body>
 <h2>orm创建表单</h2>
