--- a/weibo/templates/user_login.html
+++ b/weibo/templates/user_login.html
@@ -19,7 +19,7 @@
         <!--用户名-->
     </div>
     <div>
-        {{ form.password.as_text }}
+        {{ form.password }}
         <!--密码-->
     </div>
     <div>
